[tool.poetry]
name = "mqtt-server"
version = "0.1.0"
description = ""
authors = ["Xolog"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "4.0.1"
loguru = "0.7.0"
paho-mqtt = "1.6.1"
paramiko = "3.2.0"
psutil = "5.9.5"
pytest = "7.4.0"
python-dotenv = "1.0.0"
pyzmq = "25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
